--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     --accent-yellow: #ffcc00; 
     --bg: #0a0a0a; 
     --container-bg: rgba(18, 18, 18, 0.98); 
-    --input-bg: #e0e0e0; /* Shade darker off-white */
+    --input-bg: #cfcfcf; /* Adjusted to a softer offset white */
     --text: #ffffff;
     --text-dark: #111111;
     --text-dim: #bbbbbb;
@@ -115,7 +115,7 @@
 
   input:focus, textarea:focus {
     border-color: var(--accent-yellow);
-    background-color: #ffffff; /* Brightens slightly on focus */
+    background-color: #f0f0f0; 
     box-shadow: 0 0 0 4px rgba(255, 204, 0, 0.15);
     outline: none;
   }
