--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 <div class="container">
   <div class="header-wrap">
     <img src="icon2.png" alt="E&C Logo" onerror="this.style.display='none'"> 
-    <h1>Client Portal</h1>
+    <h1>Request Pickup Now</h1>
   </div>
 
   <form id="pickupForm">
