--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>E & C Courier Request</title>
+<title>E & C Courier Portal</title>
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#cca300">
 <link rel="icon" type="image/png" href="icon-512.png">
