--- a/index.html
+++ b/index.html
@@ -213,10 +213,15 @@
 
 <div id="auth-overlay" style="display: none; position: fixed; inset: 0; background: var(--bg); z-index: 9999; flex-direction: column; align-items: center; justify-content: center; padding: 20px;">
   <div class="container" style="padding: 40px 30px; text-align: center; margin-top: 0; box-shadow: 0 10px 40px rgba(0,0,0,0.8);">
-    <img src="icon2.png" alt="E&C Logo" style="height: 50px; margin-bottom: 20px; filter: drop-shadow(0 0 5px var(--accent));" onerror="this.style.display='none'">
-    <h2 style="color: var(--accent); margin-top: 0; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">E&C Courier Portal</h2>
-    <p style="color: #aaa; font-size: 13px; margin-bottom: 25px;">Login or create an account to request courier services.</p>
+    <img src="icon2.png" alt="E&C Logo" style="height: 50px; margin-bottom: 15px; filter: drop-shadow(0 0 5px var(--accent));" onerror="this.style.display='none'">
+    <h2 style="color: var(--accent); margin-top: 0; margin-bottom: 15px; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">E&C Courier Portal</h2>
     
+    <p style="color: #e0e0e0; font-size: 13px; margin-bottom: 10px; line-height: 1.4;">
+      <strong>About:</strong> Use this app to request and track local courier pickups and deliveries.
+    </p>
+    <p style="color: #aaa; font-size: 12px; margin-bottom: 25px; line-height: 1.4; background: #1a1a1a; padding: 10px; border-radius: 5px; border: 1px solid #333;">
+      <strong>Data Usage:</strong> We collect your email, phone number, and address strictly to create your account, process delivery dispatch, and notify you about your requests.
+    </p>
     <div class="input-group" style="text-align: left; margin-bottom: 15px;">
       <input type="email" id="auth-email" placeholder="Email Address" required>
     </div>
@@ -227,7 +232,10 @@
     <button type="button" onclick="customerLogin()" style="width: 100%; padding: 16px; background: var(--accent); color: #000; font-weight: 800; border: none; border-radius: 6px; cursor: pointer; text-transform: uppercase; margin-bottom: 12px; font-size: 16px;">Login</button>
     <button type="button" onclick="customerSignUp()" style="width: 100%; padding: 16px; background: #1c1c1c; color: var(--text); font-weight: 800; border: 1px solid var(--border); border-bottom: 3px solid var(--accent); border-radius: 6px; cursor: pointer; text-transform: uppercase; margin-bottom: 20px; font-size: 16px; transition: all 0.2s;">Create Account</button>
     
-    <a href="#" onclick="forgotPassword(); return false;" style="color: var(--placeholder); font-size: 13px; text-decoration: underline;">Forgot Password?</a>
+    <div style="display: flex; flex-direction: column; gap: 12px; margin-top: 5px;">
+      <a href="#" onclick="forgotPassword(); return false;" style="color: var(--placeholder); font-size: 13px; text-decoration: underline;">Forgot Password?</a>
+      <a href="https://app.eandccourier.ca/privacy" target="_blank" style="color: var(--accent); font-size: 13px; text-decoration: none; font-weight: bold;">Privacy Policy & Terms of Service</a>
+    </div>
   </div>
 </div>
 
