--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E&C Courier - Local Delivery Services</title>
+    <title>E&C Courier Portal</title>
     <style>
         body { font-family: sans-serif; background: #222; color: #e0e0e0; text-align: center; padding: 50px 20px; }
         .hero { max-width: 600px; margin: 0 auto; background: #141414; padding: 40px; border-radius: 8px; border: 1px solid #333; }
@@ -16,8 +16,8 @@
 <body>
     <div class="hero">
         <img src="icon2.png" alt="E&C Logo" style="height: 60px; margin-bottom: 20px;">
-        <h1>E&C Courier (ECCO)</h1>
-        <p>E&C Courier is a local delivery platform based in Brandon, Manitoba. Our app allows registered business clients to request pickups, track deliveries in real-time, and manage their courier logistics.</p>
+        <h1>E&C Courier</h1>
+        <p>E&C Courier is a local courier service based in Brandon, Manitoba. Our app allows registered clients to request pickups Online in real-time.</p>
         
         <p style="font-size: 14px; color: #aaa;">To request a delivery or view your dashboard, please log in to our secure portal.</p>
         
