--- a/portal.html
+++ b/portal.html
@@ -342,7 +342,9 @@
     apiKey: "AIzaSyAKmgoXA4m3cRTmxJq4aUyva5SVvFbTNqg",
     authDomain: "eandccourier-36fcc.firebaseapp.com",
     databaseURL: "https://eandccourier-36fcc-default-rtdb.firebaseio.com",
-    projectId: "eandccourier-36fcc"
+    projectId: "eandccourier-36fcc",
+    messagingSenderId: "1067680083511", 
+    appId: "1:1067680083511:android:22d1eb3757302492bd19b2" 
   });
 
   firebase.auth().onAuthStateChanged((user) => {
