--- a/portal.html
+++ b/portal.html
@@ -652,5 +652,80 @@
       document.body.style.overflow = '';
   }
 </script>
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+<style>
+  #dev-btn { position: fixed; bottom: 20px; left: 20px; z-index: 9999; background: #ffd700; color: #000; border: none; padding: 12px 18px; border-radius: 6px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.5); font-size: 12px; text-transform: uppercase; }
+  #dev-modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 10000; align-items: center; justify-content: center; }
+  #dev-box { background: #1a1a1a; width: 95%; max-width: 600px; height: 80vh; border-radius: 8px; border: 1px solid #ffd700; display: flex; flex-direction: column; padding: 15px; box-sizing: border-box; font-family: sans-serif; }
+  #dev-list { flex: 1; overflow-y: auto; background: #111; padding: 15px; margin-bottom: 10px; border-radius: 4px; border: 1px solid #333; color: #fff; font-size: 14px; }
+  .dev-item { border-bottom: 1px solid #333; padding-bottom: 10px; margin-bottom: 10px; }
+  .dev-hdr { font-size: 11px; color: #ffd700; margin-bottom: 5px; font-weight: bold; text-transform: uppercase; }
+  #dev-editor { background: #fff; color: #000; height: 120px; }
+  .dev-row { display: flex; gap: 10px; margin-top: 10px; }
+  .dev-action { flex: 1; padding: 12px; font-weight: bold; border: none; border-radius: 4px; cursor: pointer; text-transform: uppercase; font-size: 12px; }
+  .ql-toolbar { background: #eee; }
+</style>
+
+<button id="dev-btn" onclick="document.getElementById('dev-modal').style.display='flex'">Dev Notes</button>
+
+<div id="dev-modal">
+  <div id="dev-box">
+    <h3 style="margin:0 0 10px 0; color:#ffd700; text-transform:uppercase;">Developer Notes</h3>
+    <div id="dev-list"></div>
+    <div id="dev-editor"></div>
+    <div class="dev-row">
+      <button class="dev-action" style="background:#333; color:#fff;" onclick="document.getElementById('dev-modal').style.display='none'">Close</button>
+      <button class="dev-action" style="background:#00b32d; color:#000;" onclick="saveDevNote()">Save Note</button>
+    </div>
+  </div>
+</div>
+
+<script>
+  let devQuill;
+  
+  // Wait for the app's main Firebase script to load first
+  setTimeout(() => {
+    devQuill = new Quill('#dev-editor', {
+      theme: 'snow',
+      modules: { toolbar: [ ['bold', 'italic', 'underline'], [{ 'list': 'ordered'}, { 'list': 'bullet' }], [{ 'align': [] }] ] }
+    });
+
+    // Load notes from Firebase
+    firebase.database().ref('developer').on('value', snap => {
+      const list = document.getElementById('dev-list');
+      list.innerHTML = '';
+      const notes = snap.val() || {};
+      Object.values(notes).forEach(note => {
+        list.innerHTML += `<div class="dev-item"><div class="dev-hdr">${note.user} • ${note.date}</div><div>${note.text}</div></div>`;
+      });
+      list.scrollTop = list.scrollHeight; // Auto-scroll to bottom
+    });
+  }, 1000); 
+
+  function saveDevNote() {
+    if (devQuill.getText().trim() === "") return;
+    
+    // Get user or fallback to Unknown
+    let user = "Unknown User";
+    if (firebase.auth().currentUser) {
+      user = firebase.auth().currentUser.email.split('@')[0];
+    }
+    
+    // Get formatted date and time
+    const now = new Date();
+    const dateStr = now.toLocaleDateString() + ' ' + now.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+
+    // Save to database
+    firebase.database().ref('developer').push({
+      text: devQuill.root.innerHTML,
+      user: user,
+      date: dateStr,
+      timestamp: firebase.database.ServerValue.TIMESTAMP
+    });
+
+    devQuill.setText(''); // Clear typing area
+  }
+</script>
 </body>
 </html>
