--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <style>
         body { font-family: sans-serif; background: #222; color: #e0e0e0; text-align: center; padding: 50px 20px; }
         .hero { max-width: 600px; margin: 0 auto; background: #141414; padding: 40px; border-radius: 8px; border: 1px solid #333; }
-        h1 { color: #cca300; text-transform: uppercase; }
-        .btn { background: #cca300; color: #000; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block; margin-top: 20px; }
+        h1 { color: #ffcc00; text-transform: uppercase; }
+        .btn { background: #ffcc00; color: #000; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block; margin-top: 20px; }
         .footer-links { margin-top: 30px; font-size: 13px; }
-        .footer-links a { color: #cca300; text-decoration: none; margin: 0 10px; }
+        .footer-links a { color: #ffcc00; text-decoration: none; margin: 0 10px; }
     </style>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <h1>E&C Courier Portal</h1>
         <p>E&C Courier is a local courier service based in Brandon, Manitoba. Our app allows registered clients to request pickups Online in real-time.</p>
         
-        <p style="font-size: 14px; color: #aaa;">To request a delivery or view your dashboard, please log in to our secure portal.</p>
+        <p style="font-size: 14px; color: #aaa;">To request a delivery please log in to our secure portal.</p>
         
         <a href="portal.html" class="btn">Client Login / Sign Up</a>
 
