--- a/portal.html
+++ b/portal.html
@@ -410,7 +410,8 @@
   }
 
   firebase.initializeApp({
-    apiKey: "AIzaSyAKmgoXA4m3cRTmxJq4aUyva5SVvFbTNqg",
+    firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL);
+  apiKey: "AIzaSyAKmgoXA4m3cRTmxJq4aUyva5SVvFbTNqg",
     authDomain: "eandccourier-36fcc.firebaseapp.com",
     databaseURL: "https://eandccourier-36fcc-default-rtdb.firebaseio.com",
     projectId: "eandccourier-36fcc",
