--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL)
       Object.values(notes).forEach(note => {
         list.innerHTML += `
           <div class="dev-item">
-            <div class="dev-hdr">${note.user} • ${note.date}</div>
+            <div class="dev-hdr">${note.user} - <span style="color: orange;">${note.app || 'Database'}</span> - ${note.date}</div>
             <div style="color:#eee;">${note.text}</div>
           </div>`;
       });
@@ -907,6 +907,7 @@ firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL)
     firebase.database().ref('developer').push({
       text: devQuill.root.innerHTML,
       user: user,
+      app: "[APP NAME]",
       date: dateStr,
       timestamp: firebase.database.ServerValue.TIMESTAMP
     }).then(() => {
